<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="squash_it_view_coroutine_scope">View scope ID.</string>
  <string name="squash_it_issue_tab_title">Issue</string>
  <string name="squash_it_add_ons_tab_title">Add-ons</string>
  <string name="squash_it_reported">Successfully created report for issue %s.</string>
  <string name="squash_it_added_attachments">Successfully added attachments to %s.</string>
  <string name="squash_it_remove_attachment">Remove attachment</string>
  <string name="squash_it_attachments">Attachments</string>
  <string name="squash_it_screenshot">Screenshot</string>
  <string name="squash_it_logs">Logs</string>
  <string name="squash_it_attach_custom_file">Attach custom file</string>
  <string name="squash_it_go_back">Go back</string>
  <string name="squash_it_get_squash_it">Get Squash It</string>
  <string name="squash_it_open_squash_it">Open Squash It</string>
  <string name="squash_it_attach_error_info">Unfortunately a problem occurred while attaching files. You can try again by tapping retry button.</string>
  <string name="squash_it_retry">Retry</string>
  <string name="squash_it_retrying">Retrying…</string>
  <string name="squash_it_epic">Epic</string>
  <string name="squash_it_init_failure">Failed to initialize!</string>
  <string name="squash_it_initializing">Initializing…</string>
  <string name="squash_it_new_issue_option">New issue</string>
  <string name="squash_it_comment_option">Comment</string>
  <string name="squash_it_sub_task_option">Sub task</string>
  <string name="squash_it_description">Description</string>
  <string name="squash_it_mentions">Mentions</string>
  <string name="squash_it_issue_type">Issue type</string>
  <string name="squash_it_summary">Summary</string>
  <string name="squash_it_reporter">Reporter</string>
  <string name="squash_it_misconfiguration">Misconfiguration!</string>
  <string name="squash_it_misconfiguration_info">It appears that Squash It plugin is not configured properly. Please make sure that the configuration for these fields is correct.\n</string>
  <string name="squash_it_jira_project_key_config">projectKey</string>
  <string name="squash_it_jira_server_url_config">jiraUrl</string>
  <string name="squash_it_jira_credentials_config">credentialsProvider</string>
  <string name="squash_it_submit_failure">Something went terribly wrong!</string>
  <string name="squash_it_submit_failure_info">Tap retry to try again.</string>
  <string name="squash_it_issue_id">Issue ID</string>
  <string name="squash_it_error">Error</string>
  <string name="squash_it_submit">Submit</string>
  <string name="squash_it_submitting">Submitting…</string>
  <string name="squash_it_report_an_issue">[%s] Report an issue</string>
  <string name="squash_it_clear_canvas">Clear canvas</string>
  <string name="squash_it_change_brush_color">Change brush color</string>
  <string name="squash_it_change_brush_size">Change brush size</string>
  <string name="squash_it_undo">Undo</string>
  <string name="squash_it_redo">Redo</string>
  <string name="squash_it_save">Save</string>
  <string name="squash_it_select_brush_color">Select brush color</string>
  <string name="squash_it_select_brush_size">Select brush size</string>
  <string name="squash_it_cancel">Cancel</string>
  <string name="squash_it_select">Select</string>
  <string name="squash_it_report_notification_title">Report an issue</string>
  <string name="squash_it_report_notification_message">Capture a screenshot and report it in JIRA</string>
  <string name="squash_it_report_notification_action">Report</string>
</resources>
