<?xml version="1.0" encoding="utf-8"?>
<io.mehow.squashit.screenshot.PaintboxView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paintbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    tools:ignore="Overdraw"
    >

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/clearCanvas"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/squash_it_clear_canvas"
      android:padding="8dp"
      app:srcCompat="@drawable/squash_it_ic_clear_canvas"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/changeBrushColor"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/squash_it_change_brush_color"
      android:padding="8dp"
      app:srcCompat="@drawable/squash_it_ic_palette"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/changeBrushSize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/squash_it_change_brush_size"
      android:padding="8dp"
      app:srcCompat="@drawable/squash_it_ic_brush"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/undo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/squash_it_undo"
      android:padding="8dp"
      app:srcCompat="@drawable/squash_it_ic_undo"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/redo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/squash_it_redo"
      android:padding="8dp"
      app:srcCompat="@drawable/squash_it_ic_redo"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/squash_it_save"
      android:padding="8dp"
      app:srcCompat="@drawable/squash_it_ic_save"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

</io.mehow.squashit.screenshot.PaintboxView>
