<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="io.mehow.squashit.report.view.IssueView"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/issueContent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:padding="16dp"
      >

    <io.mehow.squashit.report.view.ReporterView
        android:id="@+id/reporter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/updateGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reporter"
        >

      <com.google.android.material.radiobutton.MaterialRadioButton
          android:id="@+id/newIssue"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:checked="true"
          android:text="@string/squash_it_new_issue_option"
          />

      <com.google.android.material.radiobutton.MaterialRadioButton
          android:id="@+id/addComment"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/squash_it_comment_option"
          />

      <com.google.android.material.radiobutton.MaterialRadioButton
          android:id="@+id/addSubTask"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/squash_it_sub_task_option"
          />

    </RadioGroup>

    <io.mehow.squashit.report.view.UpdateIssueView
        android:id="@+id/issueId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateGroup"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issueTypeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/squash_it_issue_type"
        android:labelFor="@+id/issueTypeInput"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueId"
        >

      <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/issueTypeInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:cursorVisible="false"
          android:focusable="false"
          android:inputType="textPhonetic"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/summaryLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/squash_it_summary"
        app:counterEnabled="true"
        app:counterMaxLength="80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueTypeLayout"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/summaryInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textCapSentences|textMultiLine"
          android:maxLength="80"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierAllowsGoneWidgets="true"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="summaryLayout,issueId"
        app:layout_constraintBottom_toBottomOf="@+id/summaryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <io.mehow.squashit.report.view.IssueDescriptionView
        android:id="@+id/description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
